[package]
name = "ape-table-trig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "ape-table-trig-macros",
]

[dependencies]
ape-table-trig-macros = { path = "./ape-table-trig-macros"}
libm = "0.2.6"
