[package]
name = "ape-table-trig"
version = "0.2.0"
edition = "2021"
authors = ["Charles Thompson"]
license = "MIT"
readme = "README.md"
keywords = ["math", "trigonometry", "no_std", "embedded"]
catagories = ["mathematics", "embedded", "no_std"]
description = "implementations of sin, cos, and tan using precalculated tables"
repository = "https://github.com/Gip-Gip/ape-table-trig"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "ape-table-trig-macros",
]

[dependencies]
ape-table-trig-macros = { path = "./ape-table-trig-macros", version = "0.2.0" }

[dev-dependencies]
libm = "0.2.6"
criterion = { version = "0.3.6", features = ["html_reports"]}

[[bench]]
name = "sin"
harness = false
