[package]
name = "ape-table-trig-macros"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
catagories.workspace = true
repository.workspace = true 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

